--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.002   2021-07-12  Released-By: PERLANCAR; Urgency: low
+
+	- No functional changes.
+
+	- [doc] Tweak summary & description.
+
+
 0.001   2021-07-12  Released-By: PERLANCAR
 
         - First release.
