--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.005   2021-07-20  Released-By: PERLANCAR; Urgency: medium
+
+	- No functional changes.
+
+        - [upload] Reupload to CPAN as MetaCPAN thinks 0.002 is the latest
+          version.
+
+
 0.004   2021-07-14  Released-By: PERLANCAR; Urgency: medium
 
 	- Add function: tempdir_named().
